--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Kost Finder
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/boardinghouse
+spring.datasource.username=root
+spring.datasource.password=zcbsdbsdgwegwet23
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
