Add secret & expirid into application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.datasource.password=zcbsdbsdgwegwet23
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+jwt.secret=Zcbsdbsdgwegwet23Zcbsdbsdgwegwet23 
+jwt.expired=1000 * 60 * 5
